--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
