--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
 
     <div id="map"></div>
 
+    <div class="side-panel">
+        <div id="wrap-table">
+            <table></table>
+        </div>
+        
+    </div>
+    <button class="button-open-side-panel">Таблица</button>
+
     <div id="wrap-table">
     </div>
 
