--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         
     </div> -->
 
+    <input id="searchTextField" size="50" type="text" /> 
+
     <button class="go">Построить</button>
 
     <div id="map"></div>
@@ -39,7 +41,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
