--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Maps</title>
     
+    <link rel="stylesheet" href="libs/switch-master/switch.css">
+    <link rel="stylesheet" href="libs/switchery-master/standalone/switchery.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -37,11 +39,10 @@
     </div>
     <button class="button-open-side-panel">Таблица</button>
 
-    <div id="wrap-table">
-    </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
+    <script src="libs/switch-master/switch.js"></script>
+    <script src="libs/switchery-master/standalone/switchery.js"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
