--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     
     <link rel="stylesheet" href="libs/switch-master/switch.css">
     <link rel="stylesheet" href="libs/switchery-master/standalone/switchery.css">
+    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -25,6 +27,24 @@
         
     </div> -->
 
+    <div class="wrap">
+        <header class="header">
+            <div class="container">
+                button+logo+search+Buttton-clear+button-build
+            </div>
+        </header>
+        <div class="content">
+            <div class="container">
+                content here
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                our command
+            </div>
+        </footer>
+    </div>
+   
     <input id="searchTextField" size="50" type="text" /> 
 
     <button class="go">Построить</button>
@@ -43,6 +63,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
     <script src="libs/switch-master/switch.js"></script>
     <script src="libs/switchery-master/standalone/switchery.js"></script>
+    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
