--- a/index.html
+++ b/index.html
@@ -30,25 +30,27 @@
     <div class="wrap">
         <header class="header">
             <div class="container">
-                <button class="button-menu button-top-menu">
+                <button class="button-menu button-top">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
                 <div class="logo">
-                    Построение графов
+                    <span class="text">
+                        Построение графов
+                    </span>
                 </div>
                 <div class="search">
                     <div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
                     <input id="searchTextField" type="text" placeholder="Поиск местоположения"> 
                 </div>
                 <div class="buttons">
-                    <button class="button-delete-nodes button-top-menu">
+                    <button class="button-info button-top">
                         <i class="fa fa-info" aria-hidden="true"></i>
                     </button>
-                    <button class="button-delete-nodes button-top-menu">
+                    <button class="button-delete-nodes button-top">
                         <i class="fa fa-trash" aria-hidden="true"></i>
-                        <span class="name">Удалить все точки</span>
+                        <span class="name">Очистить</span>
                     </button>
-                    <button class="button-build button-top-menu">
+                    <button class="button-build button-top">
                         <i class="fa fa-check-square-o" aria-hidden="true"></i>
                         <span class="name">Построить</span>
                     </button>
@@ -73,11 +75,31 @@
 
     <div class="side-panel">
         <div id="wrap-table">
-            <table></table>
+            <table>
+                <tr>
+                    <td>1</td>
+                    <td>checkbox</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>checkbox</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>checkbox</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>checkbox</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>checkbox</td>
+                </tr>
+            </table>
         </div>
         
     </div>
-    <button class="button-open-side-panel">Таблица</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
