edit colors, beginning of refactoring

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="text">
-                    <a href="mailto:as_filimon@mail.ru">Команда разработчиков студентов ВГУ ПММ ФИИТ</a>
+                    <a href="mailto:as_filimon@mail.ru">Задать вопрос разработчику</a>
                 </div>
             </div>
         </footer>
@@ -87,6 +87,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
     <script src="libs/switchery-master/standalone/switchery.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/table.js"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
