--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
     <script src="libs/switchery-master/standalone/switchery.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/view.js"></script>
+    <script src="js/edges.js"></script>
+    <script src="js/nodes.js"></script>
     <script src="js/table.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/common2.js"></script>
 </body>
 </html>
