done custom checkboxes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </p>
             <div class="developers">
                 <div class="row">
-                    <a href="https://vk.com/alexfilimon" class="developer">
+                    <a href="https://vk.com/alexfilimon" target="_blank" class="developer">
                         <div class="developer__img">
                             <img src="https://pp.userapi.com/c631529/v631529999/44a6e/xaCQ1iHIIVc.jpg" alt="Александр Филимонов">
                         </div>
@@ -89,7 +89,7 @@
                             Александр Филимонов
                         </div>
                     </a>
-                    <a href="https://vk.com/blessedbyjobs" class="developer">
+                    <a href="https://vk.com/blessedbyjobs" target="_blank" class="developer">
                         <div class="developer__img">
                             <img src="https://pp.userapi.com/c639627/v639627771/59452/4Yd1QOWJtjY.jpg" alt="Алексей Рябков">
                         </div>
@@ -103,14 +103,10 @@
         </div>
     </div>
 
-    <!--<div class="side-panel">
-        <div id="wrap-table">
-            <table>
-                
-            </table>
-        </div>
-        
-    </div>-->
+    <div class="popup-hub__overlay">
+        <div class="popup-hub"></div>
+    </div>
+
 
     <script src="libs/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
