--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Maps</title>
-    
+    <title>RadioGraph</title>
+    <meta name="description" content="Программа, созданная для построения сети тракинговой связи." />
+
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="libs/switchery-master/standalone/switchery.css">
     <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
@@ -11,112 +12,126 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="wrap">
+<div class="wrap">
 
-        <div class="container">
-            <header class="header">
-                <div class="search">
-                    <div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
-                    <input id="searchTextField" type="text" placeholder="Поиск местоположения">
+    <div class="container">
+        <header class="header">
+            <div class="search">
+                <div class="icon"><i class="fa fa-search" aria-hidden="true"></i></div>
+                <input id="searchTextField" type="text" placeholder="Поиск местоположения">
+            </div>
+            <div class="settings">
+                <button class="button-settings">
+                    <span class="icon"><i class="fa fa-cog" aria-hidden="true"></i></span>
+                    <span class="name">Настройки</span>
+                </button>
+            </div>
+            <div class="buttons">
+                <div class="button-build button-top">
+                    <button><i class="fa fa-check" aria-hidden="true"></i></button>
+                    <div class="extend">Построить</div>
                 </div>
-                <div class="settings">
-                    <button class="button-settings">
-                        <span class="icon"><i class="fa fa-cog" aria-hidden="true"></i></span>
-                        <span class="name">Настройки</span>
+                <div class="button-delete-nodes button-top">
+                    <button><i class="fa fa-trash" aria-hidden="true"></i></button>
+                    <div class="extend">Очистить</div>
+                </div>
+                <div class="button-info button-top">
+                    <button><i class="fa fa-info" aria-hidden="true"></i></button>
+                    <div class="extend">Инфо</div>
+                </div>
+            </div>
+        </header>
+        <div class="table-outer">
+            <div class="table-inner">
+                <div class="top">
+                    Точка <span class="name-node"></span> имеет связи:
+                </div>
+                <div class="table-content" id="table">
+                    <table>
+                    </table>
+                </div>
+                <div class="bottom">
+                    <button class="delete-node">
+                        Удалить точку
                     </button>
                 </div>
-                <div class="buttons">
-                    <div class="button-build button-top">
-                        <button><i class="fa fa-check" aria-hidden="true"></i></button>
-                        <div class="extend">Построить</div>
-                    </div>
-                    <div class="button-delete-nodes button-top">
-                        <button><i class="fa fa-trash" aria-hidden="true"></i></button>
-                        <div class="extend">Очистить</div>
-                    </div>
-                    <div class="button-info button-top">
-                        <button><i class="fa fa-info" aria-hidden="true"></i></button>
-                        <div class="extend">Инфо</div>
-                    </div>
-                </div>
-            </header>
-            <div class="table-outer">
-                <div class="table-inner">
-                    <div class="top">
-                        Точка <span class="name-node"></span> имеет связи:
-                    </div>
-                    <div class="table-content" id="table">
-                        <table>
-                        </table>
-                    </div>
-                    <div class="bottom">
-                        <button class="delete-node">
-                            Удалить точку
-                        </button>
-                    </div>
-                    <button class="close">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </button>
-                </div>
+                <button class="close">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
     </div>
-    <div id="map"></div>
+</div>
+<div id="map"></div>
 
-    <div class="back"></div>
-    <div class="popup-settings popup">
-        <div class="popup-wrap">
-            <button class="close"><i class="fa fa-times" aria-hidden="true"></i></button>
-        </div>
+<div class="back"></div>
+<div class="popup-settings popup">
+    <div class="popup-wrap">
+        <button class="close"><i class="fa fa-times" aria-hidden="true"></i></button>
     </div>
-    <div class="popup-info popup">
-        <div class="popup-wrap">
-            <button class="close"><i class="fa fa-times" aria-hidden="true"></i></button>
-            <h2>Программа RadioGraph</h2>
-            <p>
-                Программа создана при поддержке фонда психически больных людей, которые после вида этого кода выходили в окно...
-            </p>
-            <p>
-                Описание как работает
-            </p>
-            <div class="developers">
-                <div class="row">
-                    <a href="https://vk.com/alexfilimon" target="_blank" class="developer">
-                        <div class="developer__img">
-                            <img src="https://pp.userapi.com/c631529/v631529999/44a6e/xaCQ1iHIIVc.jpg" alt="Александр Филимонов">
-                        </div>
-                        <div class="developer__name">
-                            Александр Филимонов
-                        </div>
-                    </a>
-                    <a href="https://vk.com/blessedbyjobs" target="_blank" class="developer">
-                        <div class="developer__img">
-                            <img src="https://pp.userapi.com/c639627/v639627771/59452/4Yd1QOWJtjY.jpg" alt="Алексей Рябков">
-                        </div>
-                        <div class="developer__name">
-                            Алексей Рябков
-                        </div>
-                    </a>
-                </div>
+</div>
+<div class="popup-info popup">
+    <div class="popup-wrap">
+        <button class="close"><i class="fa fa-times" aria-hidden="true"></i></button>
+        <h2>Программа RadioGraph</h2>
+        <div class="text-wrap">
+            <div class="text">
+                <p>
+                    Программа, созданная для построения сети тракинговой связи.
+                    Алгоритм обеспечивает частичную автоматизацию процесса разработки сети, строя граф с некоторыми ограничениями - длина пути от базовой точки не превышает 4, и из каждого узла выходит не больше трех веток.
+                </p>
+                <h4>
+                    Как работать с программой:
+                </h4>
+                <p>
+                <ul>
+                    <li>Для построения сети разместите на карте необходимые точки и нажмите кнопку "Построить"</li>
+                    <li>Для редактирования связей с данной точкой нажмите на неё и в появившейся таблице настройте связи точек</li>
+                    <li>Для удаления точки из сети нажмите в таблице "Удалить точку"</li>
+                    <li>Для очистки сети нажмите "Очистить"</li>
+                </ul>
+                </p>
             </div>
-            <a href="mailto:as_filimon@mail.ru" class="button-write">Напишите нам</a>
         </div>
+        <div class="developers">
+            <h3>Разработчики:</h3>
+            <div class="row">
+                <a href="https://vk.com/alexfilimon" target="_blank" class="developer">
+                    <div class="developer__img">
+                        <img src="https://pp.userapi.com/c631529/v631529999/44a6e/xaCQ1iHIIVc.jpg" alt="Александр Филимонов">
+                    </div>
+                    <div class="developer__name">
+                        Александр Филимонов
+                    </div>
+                </a>
+                <a href="https://vk.com/blessedbyjobs" target="_blank" class="developer">
+                    <div class="developer__img">
+                        <img src="https://pp.userapi.com/c639627/v639627771/59452/4Yd1QOWJtjY.jpg" alt="Алексей Рябков">
+                    </div>
+                    <div class="developer__name">
+                        Алексей Рябков
+                    </div>
+                </a>
+            </div>
+        </div>
+        <a href="mailto:as_filimon@mail.ru" target="_blank" class="button-write">Напишите нам</a>
     </div>
+</div>
 
-    <div class="popup-hub__overlay">
-        <div class="popup-hub"></div>
-    </div>
+<div class="popup-hub__overlay">
+    <div class="popup-hub"></div>
+</div>
 
 
-    <script src="libs/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
-    <script src="libs/switchery-master/standalone/switchery.js"></script>
-    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/settings.js"></script>
-    <script src="js/view.js"></script>
-    <script src="js/edges.js"></script>
-    <script src="js/nodes.js"></script>
-    <script src="js/table.js"></script>
-    <script src="js/common2.js"></script>
+<script src="libs/jquery.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2evgeSPajlRd9Z2LjIraXYFQ_4J46S0&libraries=geometry,places"></script>
+<script src="libs/switchery-master/standalone/switchery.js"></script>
+<script src="libs/bootstrap/js/bootstrap.min.js"></script>
+<script src="js/settings.js"></script>
+<script src="js/view.js"></script>
+<script src="js/edges.js"></script>
+<script src="js/nodes.js"></script>
+<script src="js/table.js"></script>
+<script src="js/common2.js"></script>
 </body>
 </html>
