--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </a>
                 <a href="mailto:kchudinova@yandex.ru" target="_blank" class="developer">
                     <div class="developer__name">
-                        Чудинова Ксения Вячеславовна
+                        Чудинова Ксения Владиславовна
                     </div>
                 </a>
                 <a href="mailto:vereshaginVS@yandex.ru" target="_blank" class="developer">
@@ -123,7 +123,7 @@
             <li>
                 <input class="settings__simple-alg" type="checkbox" checked>
                 <div class="name">
-                    Простой алгоритм(из базовой точки выходит 3 пути, иначе - 8 путей)
+                    Мобильный коммутатор (3 антенны) (иначе стационарный коммутатор (8 антенн))
                 </div>
             </li>
         </ul>
